--- a/FCSeafood-Angular/src/app/modules/pages/shop/shop-content/item/item.component.html
+++ b/FCSeafood-Angular/src/app/modules/pages/shop/shop-content/item/item.component.html
@@ -54,7 +54,7 @@
 
     <div class="flex flex-wrap mt-3">
       <p-button (click)="addToCart()" label="Add to cart" class="col" styleClass="p-button-rounded w-full uppercase"></p-button>
-      <p-button label="Shop now" class="col-5" styleClass="p-button-outlined p-button-rounded w-full uppercase"></p-button>
+      <p-button (click)="shopNow()" label="Shop now" class="col-5" styleClass="p-button-outlined p-button-rounded w-full uppercase"></p-button>
     </div>
 
     <div class="flex flex-column mt-2">
