--- a/FCSeafood-Angular/src/app/modules/pages/payment/payment.component.html
+++ b/FCSeafood-Angular/src/app/modules/pages/payment/payment.component.html
@@ -73,34 +73,34 @@
     </div>
 
     <span class="chapter">Payment method</span>
-    <p-dropdown [options]="paymentSystem"
-                (onChange)="orderFormGroup.controls['selectedPaymentType'].setValue($event?.value)"
-                optionLabel="value"
-                optionValue="id"
+    <p-dropdown [options]="paymentMethodTList"
+                (onChange)="orderFormGroup.controls['paymentMethodType'].setValue($event?.value)"
+                optionLabel="name"
+                optionValue="type"
                 styleClass="w-full text-left">
     </p-dropdown>
 
-    <div class="payment-system-block" *ngIf="orderFormGroup.controls['selectedPaymentType'].value === PaymentType.Card">
+    <div class="payment-system-block" *ngIf="orderFormGroup.controls['paymentMethodType'].value === PaymentMethodType.Card">
       <div class="p-fluid">
-        <p-inputMask [required]="orderFormGroup.controls['selectedPaymentType'].value === PaymentType.Card"
+        <p-inputMask [required]="orderFormGroup.controls['paymentMethodType'].value === PaymentMethodType.Card"
                      formControlName="numberCard" placeholder="Number of card" mask="9999-9999-9999-9999" styleClass="w-full mt-3"></p-inputMask>
         <small *ngIf="orderFormGroup.controls['numberCard'].hasError('invalid') && isShowErrors" class="p-error">The card in not valid</small>
       </div>
       <div class="flex-wrapper">
         <div>
-          <p-inputMask [required]="orderFormGroup.controls['selectedPaymentType'].value === PaymentType.Card"
+          <p-inputMask [required]="orderFormGroup.controls['paymentMethodType'].value === PaymentMethodType.Card"
                        formControlName="monthYear" placeholder="mm/yy" mask="99/99" styleClass="text-center"></p-inputMask>
           <small *ngIf="orderFormGroup.controls['monthYear'].hasError('invalid') && isShowErrors" class="p-error">The month or year in not valid</small>
         </div>
         <div>
-          <p-inputMask [required]="orderFormGroup.controls['selectedPaymentType'].value === PaymentType.Card"
+          <p-inputMask [required]="orderFormGroup.controls['paymentMethodType'].value === PaymentMethodType.Card"
                        formControlName="cvv" placeholder="CVV" mask="999" styleClass="text-center"></p-inputMask>
           <small *ngIf="orderFormGroup.controls['cvv'].hasError('invalid') && isShowErrors" class="p-error">The cvv in not valid</small>
         </div>
       </div>
     </div>
 
-    <div class="payment-system-block" *ngIf="orderFormGroup.controls['selectedPaymentType'].value === PaymentType.PayPal">
+    <div class="payment-system-block" *ngIf="orderFormGroup.controls['paymentMethodType'].value === PaymentMethodType.PayPal">
 
     </div>
 
