Fixed description display

--- a/FCSeafood-Angular/src/app/modules/pages/shop/shop-content/item/item.component.html
+++ b/FCSeafood-Angular/src/app/modules/pages/shop/shop-content/item/item.component.html
@@ -35,7 +35,7 @@
 
     <div class="item-name mt-2">{{item.name}}</div>
 
-    <p-scrollPanel [style]="{ width: '100%', 'max-height': '260px' }" styleClass="p-scrollpanel-content">
+    <p-scrollPanel [style]="{ width: '100%', 'max-height': '260px' }" styleClass="p-scrollpanel-content block h-auto">
       <div class="item-description mt-2">{{item.description}}</div>
     </p-scrollPanel>
 
