--- a/FCSeafood-Angular/src/app/modules/pages/shop/shop-content/item-list/item-card/item.card.html
+++ b/FCSeafood-Angular/src/app/modules/pages/shop/shop-content/item-list/item-card/item.card.html
@@ -2,7 +2,7 @@
 
   <img class="image" [src]="item.imagePath" alt="">
 
-  <span class="name">{{item.name}}</span>
+  <span class="name text-great-wrap">{{item.name}}</span>
 
   <div class="payment-block">
     <span>Price: {{item.price}} $/kg</span>
