--- a/FCSeafood-Angular/src/app/modules/pages/home/sections/category/category.section.html
+++ b/FCSeafood-Angular/src/app/modules/pages/home/sections/category/category.section.html
@@ -6,6 +6,6 @@
       <home-category-type-card [categoryTModel]="categoryTModel"
                                *ngFor="let categoryTModel of categoryTListModel"></home-category-type-card>
     </div>
-    <p-button *ngIf="categoryTListModel.length > 0" label="See more" (click)="routeHelper.goToCategory()" styleClass="p-button-rounded p-button-secondary text-center w-15rem"></p-button>
+    <p-button *ngIf="categoryTListModel.length > 0" (click)="routeHelper.goToCategory()" label="See more" styleClass="p-button-rounded p-button-secondary text-center w-15rem"></p-button>
   </div>
 </div>
