Added shop site menu.

--- a/FCSeafood-Angular/src/app/modules/pages/shop/shop.component.html
+++ b/FCSeafood-Angular/src/app/modules/pages/shop/shop.component.html
@@ -1,5 +1,9 @@
 <div class="shop-page">
 
+  <div>
+    <shop-menu></shop-menu>
+  </div>
+
   <div class="content">
     <app-shop-content></app-shop-content>
   </div>
