Added header site menu

--- a/FCSeafood-Angular/src/app/modules/components/header/header.component.html
+++ b/FCSeafood-Angular/src/app/modules/components/header/header.component.html
@@ -7,7 +7,7 @@
   </div>
 
   <div class="header-block w-5 p-4">
-    <!--<p-menubar [model]="items"></p-menubar>-->
+    <header-menu></header-menu>
   </div>
 
   <div class="header-block w-2 p-4">
