--- a/FCSeafood-Angular/src/app/modules/pages/shop/shop-content/subcategory/subcategory-type-card/subcategory-type.card.html
+++ b/FCSeafood-Angular/src/app/modules/pages/shop/shop-content/subcategory/subcategory-type-card/subcategory-type.card.html
@@ -1,4 +1,4 @@
-<button (click)="routeHelper.goToItems(subcategoryTModel.type)" class="subcategory-type-card">
+<button (click)="goToItems(subcategoryTModel.type)" class="subcategory-type-card">
   <span class="uppercase">{{subcategoryTModel.name}}</span>
   <img src="{{subcategoryTModel.imagePath}}" alt="">
 </button>
