Removed tooltip from img in header

--- a/FCSeafood-Angular/src/app/modules/components/header/header.component.html
+++ b/FCSeafood-Angular/src/app/modules/components/header/header.component.html
@@ -2,8 +2,7 @@
 
   <div class="header-block w-3 p-4">
     <img (click)="this.routeHelper.goToHome()" class="cursor-pointer"
-         src="assets/FCSeafood_label_logo.svg" style="min-height: 61px; min-width: 200px" alt=""
-         pTooltip="Go home" tooltipPosition="bottom">
+         src="assets/FCSeafood_label_logo.svg" style="min-height: 61px; min-width: 200px" alt="">
   </div>
 
   <div class="header-block w-5 p-4">
