Fixed selector name

--- a/FCSeafood-Angular/src/app/modules/pages/shop/shop.component.html
+++ b/FCSeafood-Angular/src/app/modules/pages/shop/shop.component.html
@@ -5,7 +5,7 @@
   </div>
 
   <div class="content">
-    <app-shop-content></app-shop-content>
+    <shop-content></shop-content>
   </div>
 
 </div>
