Implemented get all completed orders

--- a/FCSeafood-Angular/src/app/modules/pages/account/account-content/purchases/purchases.component.html
+++ b/FCSeafood-Angular/src/app/modules/pages/account/account-content/purchases/purchases.component.html
@@ -1,1 +1,3 @@
-<account-purchases-card *ngIf="order" [order]="order"></account-purchases-card>
+<ng-container *ngFor="let order of orderModels">
+  <account-purchases-card *ngIf="order" [order]="order"></account-purchases-card>
+</ng-container>
