--- a/FCSeafood-Angular/src/styles.scss
+++ b/FCSeafood-Angular/src/styles.scss
@@ -5022,7 +5022,7 @@ p-treeselect.p-treeselect-clearable {
   }
 
   .p-card-content {
-    padding: 1.25rem 0;
+    /*padding: 1.25rem 0;*/
   }
 
   .p-card-footer {
