Added credentials block to personal information.

--- a/FCSeafood-Angular/src/app/modules/pages/account/account-content/personal-information/personal-information.component.html
+++ b/FCSeafood-Angular/src/app/modules/pages/account/account-content/personal-information/personal-information.component.html
@@ -16,6 +16,10 @@
 
   <p-divider></p-divider>
 
+  <personal-credentials-block *ngIf="userCredentials" [userCredentials]="userCredentials"></personal-credentials-block>
+
+  <p-divider></p-divider>
+
   <personal-address-block *ngIf="address" [address]="address" (saveChanges)="saveUserAddress()"></personal-address-block>
 
 </div>
