--- a/FCSeafood-Angular/src/app/modules/pages/account/account-content/personal-information/credentials-block/credentials.block.html
+++ b/FCSeafood-Angular/src/app/modules/pages/account/account-content/personal-information/credentials-block/credentials.block.html
@@ -12,7 +12,7 @@
           <td>
             <span *ngIf="!credentialsFormGroup.controls['isEdit'].value">{{credentialsFormGroup.controls['email'].value}}</span>
             <ng-container *ngIf="credentialsFormGroup.controls['isEdit'].value">
-              <p-button label="Change E-mail" styleClass="p-button-text"></p-button>
+              <p-button (click)="showRefreshPasswordPopup()" label="Change E-mail" styleClass="p-button-text"></p-button>
             </ng-container>
           </td>
         </tr>
