Renamed mail text

--- a/FCSeafood-Angular/src/app/modules/components/footer/footer.component.html
+++ b/FCSeafood-Angular/src/app/modules/components/footer/footer.component.html
@@ -5,7 +5,7 @@
       <div class="flex flex-column ml-5 my-2 contact-text">
         <span class="my-1">+380 (48) 123-45-67</span>
         <span class="my-1">+380 (67) 272-59-00</span>
-        <span class="my-1">freshcatch@gmail.com</span>
+        <span class="my-1">fcseafood.freshcatch@gmail.com</span>
       </div>
       <div class="flex flex-column ml-8 my-2 links-text">
         <a class="mb-1">Availability of documents</a>
