Implement reset password

--- a/FCSeafood-Angular/src/app/modules/pages/account/account-content/personal-information/credentials-block/credentials.block.html
+++ b/FCSeafood-Angular/src/app/modules/pages/account/account-content/personal-information/credentials-block/credentials.block.html
@@ -10,10 +10,11 @@
         <tr>
           <td>E-mail</td>
           <td>
-            <span *ngIf="!credentialsFormGroup.controls['isEdit'].value">{{credentialsFormGroup.controls['email'].value}}</span>
+            <span>{{credentialsFormGroup.controls['email'].value}}</span>
+<!--            <span *ngIf="!credentialsFormGroup.controls['isEdit'].value">{{credentialsFormGroup.controls['email'].value}}</span>
             <ng-container *ngIf="credentialsFormGroup.controls['isEdit'].value">
               <p-button (click)="showRefreshPasswordPopup()" label="Change E-mail" styleClass="p-button-text"></p-button>
-            </ng-container>
+            </ng-container>-->
           </td>
         </tr>
         <tr>
@@ -21,7 +22,7 @@
           <td>
             <span *ngIf="!credentialsFormGroup.controls['isEdit'].value">********</span>
             <ng-container *ngIf="credentialsFormGroup.controls['isEdit'].value">
-              <p-button label="Refresh password" styleClass="p-button-text"></p-button>
+              <p-button (click)="resetPassword()" label="Refresh password" styleClass="p-button-text"></p-button>
             </ng-container>
           </td>
         </tr>
