--- a/FCSeafood-Angular/src/styles.scss
+++ b/FCSeafood-Angular/src/styles.scss
@@ -62,6 +62,37 @@ img, svg, video {
   }
 }
 
+.loading-overlay {
+  top: 0;
+  left: 0;
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  z-index: 9999;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
+
+  &.visible {
+    transition: 0.3s;
+    display: flex;
+  }
+}
+
+.rotate-container {
+  animation: rotate 4s linear infinite;
+}
+
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 .text-great-wrap {
   word-break: break-all;
   white-space: pre-line;
