Implement forgot password send notify

--- a/FCSeafood-Angular/src/app/modules/components/popups/sign-in/sign-in.popup.html
+++ b/FCSeafood-Angular/src/app/modules/components/popups/sign-in/sign-in.popup.html
@@ -24,8 +24,8 @@
     </form>
 
     <div class="flex justify-content-between">
-      <span class="text-small">Or continue with...</span>
-      <a href="#" class="text-small text-bright-grey">Forgot your password?</a>
+      <span  class="text-small">Or continue with...</span>
+      <span (click)="openRefreshPasswordPopup()" class="text-small text-bright-grey cursor-pointer">Forgot your password?</span>
     </div>
 
     <div class="flex flex-column align-items-center w-full mt-5">
