Added buttons to header site menu

--- a/FCSeafood-Angular/src/app/modules/pages/home/sections/about-us/about-us.section.html
+++ b/FCSeafood-Angular/src/app/modules/pages/home/sections/about-us/about-us.section.html
@@ -1,4 +1,4 @@
-<div class="section">
+<div id="about-us" class="section">
   <div class="content">
     <h3>Why us?</h3>
     <div class="flex flex-wrap justify-content-center max-3-block">
