--- a/FCSeafood-Angular/src/app/modules/components/header/header.component.html
+++ b/FCSeafood-Angular/src/app/modules/components/header/header.component.html
@@ -1,6 +1,7 @@
+<!--
 <header class="flex flex-row justify-content-around w-full">
 
-  <div class="header-block w-3 p-4">
+  <div class="img-block header-block w-3 p-4">
     <img (click)="this.routeHelper.goToHome()" class="cursor-pointer"
          src="assets/FCSeafood_label_logo.svg" style="min-height: 61px; min-width: 200px" alt="">
   </div>
@@ -26,4 +27,36 @@
     </p-button>
   </div>
 
+</header>
+-->
+
+<header class="flex align-items-center">
+  <div class="w-full">
+    <p-menubar [model]="menuItems">
+      <ng-template pTemplate="start">
+        <div class="img-block mx-6">
+          <img (click)="this.routeHelper.goToHome()" class="cursor-pointer"
+               src="assets/FCSeafood_label_logo.svg" style="min-height: 61px; min-width: 200px" alt="">
+        </div>
+      </ng-template>
+      <ng-template pTemplate="end">
+        <div class="header-block">
+          <p-button (onClick)="showCartPopup()" styleClass="p-button-text"
+                    pTooltip="Cart" tooltipPosition="bottom">
+            <i class="pi pi-shopping-cart" pBadge [value]="this.orderStateService.state.orderEntityCount.toString()"></i>
+          </p-button>
+
+          <p-button (onClick)="accountClick()" styleClass="p-button-text"
+                    [pTooltip]="authStateService.IsAuthorized ? 'Account' : 'Sign In'" tooltipPosition="bottom">
+            <i class="pi pi-user"></i>
+          </p-button>
+
+          <p-button *ngIf="authStateService.IsAuthorized" (onClick)="signOut()" styleClass="p-button-text"
+                    pTooltip="Sign out" tooltipPosition="bottom">
+            <i class="pi pi-sign-out"></i>
+          </p-button>
+        </div>
+      </ng-template>
+    </p-menubar>
+  </div>
 </header>
