--- a/FCSeafood-Angular/src/app/modules/pages/home/sections/main/main.section.html
+++ b/FCSeafood-Angular/src/app/modules/pages/home/sections/main/main.section.html
@@ -1,8 +1,8 @@
 <div class="section">
   <div class="card">
     <h1>Fresh Catch</h1>
-    <span class="text-2xl mt-4">Instantly upgrade your culinary<br/>game with our seafood</span>
+    <span>Instantly upgrade your culinary<br/>game with our seafood</span>
 
-    <p-button (click)="routeHelper.goToShop()" styleClass="p-button-rounded text-center mt-4">Make an order</p-button>
+    <p-button (click)="routeHelper.goToShop()" styleClass="p-button-rounded text-center mt-4 text-2xl">Make an order</p-button>
   </div>
 </div>
