--- a/FCSeafood-Angular/src/app/modules/pages/shop/shop-content/item/item.component.html
+++ b/FCSeafood-Angular/src/app/modules/pages/shop/shop-content/item/item.component.html
@@ -23,13 +23,13 @@
   </div>
 
   <div class="mx-3" style="max-width: 670px">
-    <div class="flex justify-content-end">
+    <!--<div class="flex justify-content-end">
       <p-button class="absolute" styleClass="p-button-text"
                 pTooltip="Add to compare filled"
                 tooltipPosition="left">
         <img alt="" ngSrc="assets/icons/filled-compare.svg" height="20" width="24">
       </p-button>
-    </div>
+    </div>-->
 
     <div class="item-category">{{item.category.name}}, {{item.subcategory.name}}</div>
 
@@ -41,7 +41,7 @@
 
     <div class="flex justify-content-between align-items-center my-4">
       <div class="item-price">{{UiHelper.FormatCurrency(item.price)}}/kg</div>
-      <span class="show-wholesale-prices">Show wholesale prices</span>
+      <span class="show-wholesale-prices hidden">Show wholesale prices</span>
 
       <div class="flex align-items-center">
         <span class="p-float-label">
