--- a/FCSeafood-Angular/src/app/modules/pages/account/account-content/purchases/purchases.component.html
+++ b/FCSeafood-Angular/src/app/modules/pages/account/account-content/purchases/purchases.component.html
@@ -1,3 +1,9 @@
+<ng-container *ngIf="orderModels.length <= 0">
+  <div class="flex justify-content-center">
+    <span class="no-data my-8">No Data</span>
+  </div>
+</ng-container>
+
 <ng-container *ngFor="let order of orderModels">
   <account-purchases-card *ngIf="order" [order]="order"></account-purchases-card>
 </ng-container>
