--- a/FCSeafood-Angular/src/app/modules/pages/account/account.component.html
+++ b/FCSeafood-Angular/src/app/modules/pages/account/account.component.html
@@ -5,6 +5,10 @@
     <p-divider></p-divider>
   </div>
 
+  <div class="account-menu">
+    <p-panelMenu [model]="accountMenu"></p-panelMenu>
+  </div>
+
   <div class="content">
     <div class="left-panel">
       <div class="navigate-list">
