--- a/FCSeafood-Angular/src/app/modules/pages/home/sections/suppliers/suppliers.section.scss
+++ b/FCSeafood-Angular/src/app/modules/pages/home/sections/suppliers/suppliers.section.scss
@@ -1,3 +1,16 @@
 .section {
   padding: 50px 0;
+
+  .objects {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+
+    .supplier {
+      padding: 18px 32px;
+      color: white;
+      margin: 0.5rem;
+      background-color: var(--primary-color);
+    }
+  }
 }
