--- a/FCSeafood-Angular/src/app/modules/pages/account/account-content/delivery/delivery-card/delivery.card.html
+++ b/FCSeafood-Angular/src/app/modules/pages/account/account-content/delivery/delivery-card/delivery.card.html
@@ -62,5 +62,5 @@
     </tr>
   </table>
 
-  <p-button label="Details" styleClass="p-button-text"></p-button>
+  <p-button (click)="openDeliveryFullInformationPopup()" label="Details" styleClass="p-button-text"></p-button>
 </div>
