--- a/FCSeafood-Angular/src/app/modules/pages/account/account-content/delivery/delivery.component.html
+++ b/FCSeafood-Angular/src/app/modules/pages/account/account-content/delivery/delivery.component.html
@@ -4,7 +4,7 @@
   </div>
 </ng-container>
 
-<div class="flex">
+<div class="flex flex-wrap justify-content-center">
   <ng-container *ngIf="deliveries.length > 0">
     <account-delivery-card *ngFor="let delivery of deliveries" [delivery]="delivery" [deliveryStatusTList]="deliveryStatusTList"></account-delivery-card>
   </ng-container>
