Fixed UI bugs / added images

--- a/FCSeafood-Angular/src/app/modules/components/header/header.component.html
+++ b/FCSeafood-Angular/src/app/modules/components/header/header.component.html
@@ -20,7 +20,7 @@
           </p-button>
 
           <p-button *ngIf="authStateService.IsAuthorized" (onClick)="signOut()" styleClass="p-button-text"
-                    pTooltip="Sign out" tooltipPosition="bottom">
+                    pTooltip="Sign out" tooltipPosition="left">
             <i class="pi pi-sign-out"></i>
           </p-button>
         </div>
