--- a/FCSeafood-Angular/src/app/modules/pages/shop/shop-content/item-list/item-card/item.card.html
+++ b/FCSeafood-Angular/src/app/modules/pages/shop/shop-content/item-list/item-card/item.card.html
@@ -2,21 +2,21 @@
 
   <img class="image" [src]="item.imagePath" alt="">
 
-  <span class="name text-great-wrap">{{item.name}}</span>
+  <span class="name text-great-wrap flex align-items-center">{{item.name}}</span>
 
   <div class="payment-block">
-    <span>Price: {{item.price}} $/kg</span>
-    <p-button pTooltip="Add to compare filled" styleClass="p-button-text">
+    <span>Price: {{UiHelper.FormatCurrency(item.price)}}/kg</span>
+<!--    <p-button pTooltip="Add to compare filled" styleClass="p-button-text">
       <img alt="" ngSrc="assets/icons/filled-compare.svg" height="20" width="24">
-    </p-button>
+    </p-button>-->
   </div>
-
+<!--
   <div class="tags">
     <p-tag styleClass="bg-white border-2 border-primary text-gray-700 tag" value="-15% OFF"></p-tag>
     <p-tag styleClass="bg-white border-2 border-primary text-gray-700 tag" value="Free delivery"></p-tag>
-  </div>
+  </div>-->
 
-  <div class="flex flex-wrap">
+  <div class="flex flex-wrap mt-3">
     <p-button (click)="addToCart()" label="Add to cart" class="col" styleClass="p-button-rounded w-full uppercase"></p-button>
     <p-button (click)="routeHelper.goToItem(item.code)" label="Details" class="col" styleClass="p-button-outlined p-button-rounded w-full uppercase"></p-button>
   </div>
